--- a/index.html
+++ b/index.html
@@ -6,5 +6,11 @@
         <link href="style.css" rel="stylesheet">
     </head>
     <body>
+        <h1>
+            Bienvenue!
+        </h1>
+        <p>
+            Bienvenue sur ChromaDex!
+        </p>
     </body>
 </html>
